Sun May 24 22:39:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (syserr_initialize): errno is int.

Sun May 24 00:52:54 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* configure.in ($ridir): new configuration. [ruby-core:23520].
	  c.f. [ruby-core:23519].

	  (--with-ridir): new configure option.

	* tool/instruby.rb (:doc, :rdoc): uses $ridir instead of
	  a fixed path.

	* lib/rdoc/ri/paths.rb: follows $ridir.

	* Makefile.in: removes RIDATADIR which is no longer used.

	* bcc32/Makefile.sub: generates the 'ridir' entry for RbConfig.
	  removes RIDATADIR which is no longer used.

	* win32/Makefile.sub: ditto.

Sat May 23 23:52:33 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_each_char): return original string.
	  [ruby-core:23499]

	* string.c (rb_str_each_codepoint): protect string from
	  modification.

Sat May 23 21:48:58 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/handle.c (rb_dlhandle_s_sym): added a method to access
	  using RTLD_NEXT.  [ruby-dev:38152]

	* ext/dl/handle.c (Init_dlhandle): added constants DEFAULT and
	  NEXT which correspond to RTLD_DEFAULT and RTLD_NEXT.

Sat May 23 18:53:13 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/lib/dl/cparser.rb (DL::CParser#parse_struct_signature):
	  splitting with regexp source string is obsolete.  a patch from
	  Minwoo Lee at [ruby-core:23494].

	* ext/dl/cptr.c (rb_dlptr_cmp): return signed value, and restric
	  to Fixnum.  [ruby-dev:38533]

Fri May 22 23:22:53 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* missing/vsnprintf.c (errno): [BUG] fixes a compilation 
	  error on SIZEOF_LONG > SIZEOF_INT.
	  (BSD_vfprintf): ditto.

Fri May 22 23:20:48 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* spec/default.mspec: follows runruby.rb's move at r23542.

Fri May 22 21:38:55 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* NEWS: add Time#to_r.

Fri May 22 20:29:01 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* config.guess: moved into tool/.

	* config.sub: ditto.